<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_height="wrap_content"
  	android:orientation="vertical"
  	android:layout_width="fill_parent">

    <TextView 
        android:layout_height="wrap_content"
      	android:layout_width="fill_parent" 
      	android:layout_weight="1"
      	android:id="@+id/timestampname" 
      	android:text="@string/timestamp"/>

    <TextView 
        android:layout_height="wrap_content"
      	android:layout_width="fill_parent" 
      	android:layout_weight="1"
      	android:id="@+id/highname"
      	android:text="@string/high" />
    
    <TextView 
        android:layout_height="wrap_content"
      	android:layout_width="fill_parent" 
      	android:layout_weight="1"
      	android:id="@+id/lowname"
      	android:text="@string/low" />
    
    <TextView 
        android:layout_height="wrap_content"
      	android:layout_width="fill_parent" 
      	android:layout_weight="1"
      	android:id="@+id/lastname"
      	android:text="@string/last" />
    
    <TextView 
        android:layout_height="wrap_content"
      	android:layout_width="fill_parent" 
      	android:layout_weight="1"
      	android:id="@+id/bidname"
      	android:text="@string/bid" />
    
    <TextView 
        android:layout_height="wrap_content"
      	android:layout_width="fill_parent" 
      	android:layout_weight="1"
      	android:id="@+id/askname"
      	android:text="@string/ask" />
    
    <TextView 
        android:layout_height="wrap_content"
      	android:layout_width="fill_parent" 
      	android:layout_weight="1"
      	android:id="@+id/vwapname"
      	android:text="@string/vwap" />
    
    <TextView 
        android:layout_height="wrap_content"
      	android:layout_width="fill_parent" 
      	android:layout_weight="1"
      	android:id="@+id/volumename"
      	android:text="@string/volume" />
  
</LinearLayout>