<?xml version="1.0" encoding="utf-8"?>


<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="10sp" android:paddingRight="10sp"
    android:orientation="vertical" android:paddingTop="2sp"
    android:weightSum = "1" >

    <LinearLayout 
        android:layout_weight="0.125" 
        android:layout_height="match_parent" 
        android:layout_width="match_parent"
        android:orientation = "horizontal"
        >

        <TextView 
        android:layout_height="wrap_content"
      	android:layout_width="wrap_content"     	
      	android:gravity="left"
      	android:id="@+id/timestampname" 
      	android:text="@string/timestamp"
      	android:textSize="22sp" />
        
        <TextView 
        android:layout_height="wrap_content"
      	android:layout_width="wrap_content" 
      	android:gravity="right"
      	android:id="@+id/timestamp" 
      	android:text="@string/timestamp"
      	android:textSize="22sp" />      
    </LinearLayout>

	<LinearLayout 
	    android:layout_weight="0.125" 
        android:layout_height="fill_parent" 
        android:layout_width="fill_parent"
        android:orientation = "horizontal">

	    <TextView 
        android:layout_height="fill_parent"
      	android:layout_width="wrap_content" 
      	android:id="@+id/highname"
      	android:text="@string/high"
      	android:textSize="22sp" />
	    
    	<TextView 
        android:layout_height="fill_parent"
      	android:layout_width="wrap_content" 
      	android:id="@+id/high"
      	android:text="@string/high" 
      	android:textSize="22sp" />   	
	</LinearLayout>

	<LinearLayout 
	    android:layout_weight="0.125" 
        android:layout_height="fill_parent" 
        android:layout_width="fill_parent"
        android:orientation = "horizontal">
    	
	    <TextView 
        android:layout_height="fill_parent"
      	android:layout_width="wrap_content" 
      	android:id="@+id/lowname"
      	android:text="@string/low"
      	android:textSize="22sp" />
	    
	    <TextView 
        android:layout_height="fill_parent"
      	android:layout_width="wrap_content" 
      	android:id="@+id/low"
      	android:text="@string/low" 
      	android:textSize="22sp" />	    
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_weight="0.125" 
        android:layout_height="fill_parent" 
        android:layout_width="fill_parent"
        android:orientation = "horizontal">
	
	    <TextView 
        android:layout_height="fill_parent"
      	android:layout_width="wrap_content" 
      	android:id="@+id/lastname"
      	android:text="@string/last"
      	android:textSize="22sp" />
	    
	    <TextView 
        android:layout_height="fill_parent"
      	android:layout_width="wrap_content" 
      	android:id="@+id/last"
      	android:text="@string/last" 
      	android:textSize="22sp" />   
	</LinearLayout>
	 
	<LinearLayout 
	    android:layout_weight="0.125" 
        android:layout_height="fill_parent" 
        android:layout_width="fill_parent"
        android:orientation = "horizontal">
	    
	    <TextView 
        android:layout_height="fill_parent"
      	android:layout_width="wrap_content" 
      	android:id="@+id/bidname"
      	android:text="@string/bid"
      	android:textSize="22sp" />
	    
	    <TextView 
        android:layout_height="fill_parent"
      	android:layout_width="wrap_content" 
      	android:id="@+id/bid"
      	android:text="@string/bid"
      	android:textSize="22sp" />    
	</LinearLayout>  
	    
	    
	<LinearLayout 
	    android:layout_weight="0.125" 
        android:layout_height="fill_parent" 
        android:layout_width="fill_parent"
        android:orientation = "horizontal">
	    
	    <TextView 
        android:layout_height="fill_parent"
      	android:layout_width="wrap_content" 
      	android:id="@+id/askname"
      	android:text="@string/ask" 
      	android:textSize="22sp" />
	    
	    <TextView 
        android:layout_height="fill_parent"
      	android:layout_width="wrap_content" 
      	android:id="@+id/ask"
      	android:text="@string/ask" 
      	android:textSize="22sp" />      
	</LinearLayout>
	
    <LinearLayout 
	    android:layout_weight="0.125" 
        android:layout_height="fill_parent" 
        android:layout_width="fill_parent"
        android:orientation = "horizontal">
	    
        <TextView 
        android:layout_height="fill_parent"
      	android:layout_width="wrap_content" 
      	android:id="@+id/vwapname"
      	android:text="@string/vwap" 
      	android:textSize="22sp" />
        
        <TextView 
        android:layout_height="fill_parent"
      	android:layout_width="wrap_content" 
      	android:id="@+id/vwap"
      	android:text="@string/vwap" 
      	android:textSize="22sp" />     
    </LinearLayout>
        
    <LinearLayout 
	    android:layout_weight="0.125" 
        android:layout_height="fill_parent" 
        android:layout_width="fill_parent"
        android:orientation = "horizontal">
        
        <TextView 
        android:layout_height="fill_parent"
      	android:layout_width="wrap_content" 
      	android:id="@+id/volumename"
      	android:text="@string/volume"
      	android:textSize="22sp" />
        
        <TextView 
        android:layout_height="fill_parent"
      	android:layout_width="wrap_content" 
      	android:id="@+id/volume"
      	android:text="@string/volume" 
      	android:textSize="22sp" />     
	</LinearLayout>
	
    
</LinearLayout>
